--- a/packages/browser-runtime/tsconfig.json
+++ b/packages/browser-runtime/tsconfig.json
@@ -4,7 +4,7 @@
     "composite": true,
     "declarationDir": "../../build/browser-runtime",
     "rootDir": "src",
-    "lib": ["ES2020", "DOM", "DOM.Iterable", "WebWorker"],
+    "lib": ["ES6"],
     "tsBuildInfoFile": "../../build/browser-runtime/.tsbuildinfo"
   },
   "include": ["src/**/*.ts"],
