--- a/packages/browser-runtime/tsconfig.json
+++ b/packages/browser-runtime/tsconfig.json
@@ -4,7 +4,8 @@
     "composite": true,
     "declarationDir": "../../build/browser-runtime",
     "rootDir": "src",
-    "lib": ["ES6"],
+    "lib": ["ES2020", "DOM"],
+    "target": "ES2020",
     "tsBuildInfoFile": "../../build/browser-runtime/.tsbuildinfo"
   },
   "include": ["src/**/*.ts"],
