--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mqxym/cryptit",
-    "version": "0.2.3",
+    "version": "0.2.4",
     "type": "module",
     "workspaces": [
         "packages/*"
@@ -24,9 +24,12 @@
         "tslib": "^2.8.1"
     },
     "devDependencies": {
+        "@types/bun": "^1.2.19",
         "@types/jest": "^30.0.0",
         "@types/node": "^24.1.0",
         "eslint": "^8.57.0",
+        "execa": "^9.6.0",
+        "ts-node": "^10.9.2",
         "typescript": "^5.5.0"
     },
     "exports": {
