--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mqxym/cryptit",
-    "version": "0.2.4",
+    "version": "0.2.5",
     "type": "module",
     "workspaces": [
         "packages/*"
@@ -18,6 +18,7 @@
         "bun": ">=1.0.0"
     },
     "dependencies": {
+        "@noble/ciphers": "^1.3.0",
         "argon2": "^0.43.1",
         "argon2-browser": "^1.18.0",
         "commander": "^11.0.1",
