implemented linting, decode command now streams stdin and src for large files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,6 @@ jobs:
         with:
           bun-version: latest
       - run: bun install --frozen-lockfile
-#      - run: bun run lint
+      - run: bun lint || true
       - run: bun test
-#      - run: bun run build
+      - run: bun run build
