--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
         "@types/bun": "^1.2.19",
         "@types/jest": "^30.0.0",
         "@types/node": "^24.1.0",
-        "eslint": "^8.57.0",
+        "@typescript-eslint/eslint-plugin": "^8.39.0",
+        "@typescript-eslint/parser": "^8.39.0",
+        "eslint": "^9.32.0",
         "execa": "^9.6.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.0"
