--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,6 +11,9 @@ permissions:
   contents: read
   packages: write
 
+env:
+  VERSION: "0.0.0"
+
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -18,6 +21,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Get CLI version
+        run: |
+          echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
@@ -38,7 +45,23 @@ jobs:
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/cryptit-cli:latest
+            ghcr.io/${{ github.repository_owner }}/cryptit-cli:${{ env.VERSION }}
             ghcr.io/${{ github.repository_owner }}/cryptit-cli:${{ github.sha }}
+
 
       - name: Confirm pushed image
         run: echo "ghcr.io/${{ github.repository_owner }}/cryptit-cli@sha256:${{ steps.publish.outputs.digest }}"
+
+      - name: Install Trivy
+        uses: aquasecurity/setup-trivy@v0.2.3
+        with:
+          version: 'latest'
+          cache: true
+          
+      - name: Scan Docker image with Trivy
+        run: |
+          trivy image \
+            --exit-code 1 \
+            --severity HIGH,CRITICAL \
+            --ignore-unfixed \
+            ghcr.io/${{ github.repository_owner }}/cryptit-cli:latest
