set test timeout in ci cases, moved argon2.wasm loading logic to `examples/index.html`, fix crossover test by providing argon2.wasm hook for node environment

--- a/.github/workflows/base-ci.yml
+++ b/.github/workflows/base-ci.yml
@@ -36,5 +36,5 @@ jobs:
           bun-version: latest
       - run: bun ci
       - run: bun lint || true
-      - run: bun test
+      - run: bun test  --timeout 20000
       - run: bun run build
