--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -78,15 +78,14 @@ jobs:
             --target=${{ matrix.target }} \
             "${{ env.ENTRYPOINT }}" \
             --outfile "${{ env.OUTDIR }}/myapp-${{ matrix.target }}${{ matrix.ext }}"
-        shell: bash
-
+        shell: bash 
 
       - name: Upload artifact (${{
           matrix.target }})
         uses: actions/upload-artifact@v4
         with:
           name: myapp-${{ matrix.target }}${{ matrix.ext }}
-          path: $OUT_DIR/myapp-${{ matrix.target }}${{ matrix.ext }}
+          path: ${{ env.OUTDIR }}/myapp-${{ matrix.target }}${{ matrix.ext }}
 
   release:
     name: Upload to GitHub Release
