--- a/.github/workflows/base-ci.yml
+++ b/.github/workflows/base-ci.yml
@@ -6,29 +6,28 @@ on:
     branches: [main]
 
 jobs:
-#  codeql:
-#    name: CodeQL Security Scan
-#    runs-on: ubuntu-latest
-#    permissions:
-#      actions: read
-#      contents: read
-#      security-events: write
-#    steps:
-#      - name: Checkout source code
-#        uses: actions/checkout@v4
-#      - name: Initialize CodeQL
-#        uses: github/codeql-action/init@v2
-#        with:
-#          languages: javascript,typescript
-#      - name: Autobuild
-#        uses: github/codeql-action/autobuild@v2
-#      - name: Perform CodeQL Analysis
-#        uses: github/codeql-action/analyze@v2
+  codeql:
+    name: CodeQL Security Scan
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: javascript,typescript
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v2
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
 
   test-build:
     name: Build & Test
     runs-on: ubuntu-latest
-#    needs: codeql
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
