--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,7 +18,7 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-      day_of_week: "saturday"
+      day: "saturday"
     open-pull-requests-limit: 5
     labels:
       - "dependencies"
@@ -31,7 +31,7 @@ updates:
     directory: "/"               
     schedule:
       interval: "weekly"
-      day_of_week: "saturday"
+      day: "saturday"
     open-pull-requests-limit: 5
     labels:
       - "infra"
@@ -44,7 +44,7 @@ updates:
     directory: "/" 
     schedule:
       interval: "weekly"
-      day_of_week: "saturday"
+      day: "saturday"
     open-pull-requests-limit: 5
     labels:
       - "infra"
