--- a/.github/workflows/base-ci.yml
+++ b/.github/workflows/base-ci.yml
@@ -1,7 +1,8 @@
 name: Base CI
 on:
   push:
-    branches: [main]
+    branches-ignore:
+      - 'gh-pages'
   pull_request:
     branches: [main]
 
@@ -36,4 +37,5 @@ jobs:
       - run: bun ci
       - run: bun lint || true
       - run: bun test  --timeout 20000
+      - run: bun audit
       - run: bun run build
