--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -132,6 +132,6 @@ jobs:
         - uses: actions/setup-node@v4
           with:
             registry-url: https://registry.npmjs.org/
-            node-version: '20'
+            node-version: 20
 
         - run: npm publish --access public --provenance
