--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -136,3 +136,5 @@ jobs:
             node-version: 20
 
         - run: npm publish --access public --provenance
+          env:
+            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
