--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -177,5 +177,5 @@ jobs:
             node-version: 20
 
         - run: npm publish --access public --provenance
-          env:
-            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+#          env:
+#            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
