--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -175,6 +175,7 @@ jobs:
           with:
             registry-url: https://registry.npmjs.org/
             node-version: 20
+            scope: '@mqxym'
 
         - run: npm publish --access public --provenance
 #          env:
