enable npm token

--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -178,5 +178,5 @@ jobs:
             scope: '@mqxym'
 
         - run: npm publish --access public --provenance
-#          env:
-#            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          env:
+            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
