--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mqxym/cryptit",
-    "version": "2.1.2",
+    "version": "2.1.3",
     "repository": "https://github.com/mqxym/cryptit",
     "description": "Modern, cross-platform AES-GCM 256 / XChaCha20Poly1305 + Argon2-id encryption for files and text.",
     "type": "module",
@@ -43,10 +43,12 @@
     },
     "dependencies": {
         "@noble/ciphers": "^1.3.0",
-        "argon2": "^0.44.0",
         "argon2-browser": "^1.18.0",
         "commander": "^11.0.1",
         "tslib": "^2.8.1"
+    },
+    "optionalDependencies": {
+        "@node-rs/argon2": "^2.0.2"
     },
     "devDependencies": {
         "@types/bun": "^1.2.19",
