--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,7 @@ updates:
       prefix: "chore(bun)"
     assignees:
       - "mqxym"
+    target-branch: dev
 
   - package-ecosystem: "github-actions"
     directory: "/"               
@@ -39,6 +40,7 @@ updates:
       prefix: "chore(ci)"
     assignees:
       - "mqxym"
+    target-branch: dev
 
   - package-ecosystem: "docker"
     directory: "/" 
@@ -52,3 +54,4 @@ updates:
       prefix: "chore(docker)"
     assignees:
       - "mqxym"
+    target-branch: dev
