--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -66,7 +66,8 @@ jobs:
       - name: Read package version
         id: pkg_ver
         shell: bash
-        run: echo "version=$(node -p \"require('./package.json').version\")" >> "$GITHUB_OUTPUT"
+        run: |
+          node -e "console.log('version=' + require('./package.json').version)" >> "$GITHUB_OUTPUT"
 
       - name: Install dependencies
         run: bun ci
