--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mqxym/cryptit",
-    "version": "2.2.2",
+    "version": "2.2.3",
     "repository": "https://github.com/mqxym/cryptit",
     "description": "Modern, cross-platform AES-GCM 256 / XChaCha20Poly1305 + Argon2-id encryption for files and text.",
     "type": "module",
@@ -53,7 +53,7 @@
     "devDependencies": {
         "@types/bun": "1.3.0",
         "@types/jest": "^30.0.0",
-        "@types/node": "^24.3.0",
+        "@types/node": "24.7.1",
         "@typescript-eslint/eslint-plugin": "8.46.0",
         "@typescript-eslint/parser": "8.46.0",
         "eslint": "^9.34.0",
