--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,7 +26,7 @@ updates:
       prefix: "chore(bun)"
     assignees:
       - "mqxym"
-    target-branch: dev
+    target-branch: "mqxym/dev"
 
   - package-ecosystem: "github-actions"
     directory: "/"               
@@ -40,7 +40,7 @@ updates:
       prefix: "chore(ci)"
     assignees:
       - "mqxym"
-    target-branch: dev
+    target-branch: "mqxym/dev"
 
   - package-ecosystem: "docker"
     directory: "/" 
@@ -54,4 +54,4 @@ updates:
       prefix: "chore(docker)"
     assignees:
       - "mqxym"
-    target-branch: dev
+    target-branch: "mqxym/dev"
